# tauri-plugin-visual-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SHARED_TASK_NOTES.md  package-lock.json  package.json  state.json
.github/workflows/: checks.yml  release.yml
.qa/: .gitignore  edge-cases.md  project.yaml
.qa/acceptance/: _template.md  bench-idle.md  ci-pipeline.md  clipboard-reload.md  commands-api.md  composer-copy.md  context-bundle.md  docs-plugin-api.md  fast-dev-start.md  floating-overlay-ui.md  guest-bootstrap.md  guest-measure.md  inspector-hub.md  inspector-ui.md  monorepo-scaffold.md  overlay-ui-polish.md  react-vite-example.md  screenshot-editor-undo.md  screenshot.md  sdk-metadata.md  security-gates.md  selector-algorithm.md  session-model.md  settings-persistence.md  vanilla-example.md
.qa/design/: _template.md
bench/: .gitignore  README.md  idle-overhead.ts  results.json
crates/core/: Cargo.toml
crates/core/src/: bundle.rs  lib.rs  relationships.rs  selector.rs  session.rs  types.rs
crates/plugin/: Cargo.toml  build.rs
crates/plugin/guest/: guest-runtime.iife.js
crates/plugin/permissions/: all.toml  capture.toml  default.toml  inspect.toml
crates/plugin/permissions/autogenerated/: reference.md
crates/plugin/permissions/autogenerated/commands/: clear_session.toml  copy_context_bundle.toml  copy_screenshot_image.toml  copy_screenshot_path.toml  emit_state.toml  export_context.toml  hard_reload.toml  notify_navigation.toml  open_screenshot_folder.toml  pin_target_webview.toml  read_capture_image.toml  remove_capture.toml  remove_element.toml  report_selection.toml  revalidate.toml  save_capture_image.toml  set_capture_included.toml  set_issue_text.toml  set_primary_capture.toml  set_target_webview.toml  unpin_target_webview.toml
crates/plugin/permissions/schemas/: schema.json
crates/plugin/src/: assets.rs  clipboard.rs  commands.rs  config.rs  hub.rs  inspector_window.rs  lib.rs  models.rs  paths.rs  reload.rs  screenshot.rs  security.rs  settings.rs  webview.rs
docs/: PRD.md  RELEASE.md  SETUP_REPORT.md  UI_STYLEGUIDE.md  architecture.md  consuming-apps.md  context-bundle-format.md  integration-guide.md  plugin-api.md  quick-start.md  roadmap.md
examples/react-vite/: README.md  bench.html  index.html  modal.html  package.json  vite.config.ts
examples/react-vite/src/: App.tsx  ModalApp.tsx  bench.tsx  index.css  modal.tsx
examples/react-vite/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-vite/src-tauri/capabilities/: default.json
examples/react-vite/src-tauri/src/: lib.rs  main.rs
examples/react-vite/src/components/: DemoCard.tsx  InspectorToolbar.tsx
examples/react-vite/src/lib/: openModalWebview.ts
examples/vanilla/: README.md  index.html  package.json  vite.config.ts
examples/vanilla/src/: main.ts  style.css
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: main.rs
runs/: issue-1.md  issue-10.md  issue-11.md  issue-12.md  issue-15.md  issue-16.md  issue-2.md  issue-3.md  issue-5.md  issue-6.md  issue-7.md  issue-8.md  issue-9.md
scripts/: create-github-issues.sh  run-checks.sh
templates/consuming-app/: cargo-patch-local.toml  dependabot.yml
