[workspace]
members = ["crates/core", "crates/plugin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/iamthamanic/tauri-plugin-visual-editor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
tauri-plugin = { version = "2", features = ["build"] }
