[workspace]
members = ["crates/core", "crates/plugin"]
resolver = "2"
exclude = ["examples/react-vite/src-tauri", "examples/vanilla/src-tauri"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/iamthamanic/tauri-plugin-visual-editor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
tauri-plugin = { version = "2", features = ["build"] }
base64 = "0.22"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
xcap = "0.9.6"
tokio = { version = "1", features = ["time"] }
rust-embed = "8"
mime_guess = "2"
